[gd_scene load_steps=15 format=3 uid="uid://coxnlx6injpmt"]

[ext_resource type="Script" path="res://scenes/level_2.gd" id="1_6xc7j"]
[ext_resource type="PackedScene" uid="uid://buukchwddsq16" path="res://player_tank/player_tank.tscn" id="2_1kipn"]
[ext_resource type="PackedScene" uid="uid://bi00ua5nemag2" path="res://enemies/enemy_tank.tscn" id="3_nk12r"]
[ext_resource type="Material" uid="uid://ck5yy6bnnfhoe" path="res://environment/test_ground.tres" id="4_3jbwe"]
[ext_resource type="PackedScene" uid="uid://2ikvy6rs6ql4" path="res://Collectibles/health_crate.tscn" id="5_n2rjg"]
[ext_resource type="PackedScene" uid="uid://copk8kj3vfvb5" path="res://Collectibles/shell_crate.tscn" id="6_4xvo4"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_b4fk2"]
sky_top_color = Color(0.352941, 0.745098, 0.964706, 1)
sky_horizon_color = Color(0.638235, 0.728525, 0.774426, 1)
ground_horizon_color = Color(0.638235, 0.728525, 0.774426, 1)

[sub_resource type="Sky" id="Sky_3scxv"]
sky_material = SubResource("ProceduralSkyMaterial_b4fk2")

[sub_resource type="Environment" id="Environment_kury7"]
background_mode = 2
sky = SubResource("Sky_3scxv")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="NavigationMesh" id="NavigationMesh_txjhr"]
vertices = PackedVector3Array(-5.75, 1, -15.75, -4.25, 1, -16.25, -4.25, 1, -48, -48, 1, -7.25, -13.25, 1, -7.25, -12.75, 1, -8.75, -12.75, 1, -8.75, -5.75, 1, -15.75, -4.25, 1, -48, -48, 1, -48, -48, 1, -7.25, -1.25, 1, -11.25, 1, 1, -8.75, 2.5, 1, -9.25, -0.75, 1, -13.25, 12.25, 1, -6.5, 12.75, 1, -9.75, 11, 1, -10.75, 2.5, 1, -9.25, -2.75, 1, -15.75, -1.25, 1, -14.25, 11.5, 1, -15.5, -1.25, 1, -14.25, -0.75, 1, -13.25, 2.5, 1, -9.25, 10.5, 1, -12.75, 11.5, 1, -15.5, -4.25, 1, -16.25, -2.75, 1, -15.75, 11.5, 1, -15.5, 13.5, 1, -16.25, 13.5, 1, -48, -4.25, 1, -48, 2.5, 1, -9.25, 11, 1, -10.75, 10.5, 1, -12.75, 24.5, 1, -12.75, 25, 1, -11.25, 48, 1, -11.25, 23, 1, -13.75, 24.5, 1, -12.75, 48, 1, -11.25, 13.5, 1, -16.25, 23, 1, -13.75, 48, 1, -11.25, 48, 1, -48, 13.5, 1, -48, -8.25, 1, -4, -9, 1, -3.75, -8.25, 1, -2.5, -7.25, 1, -3, -4.5, 1, -3, -3.25, 1, -2, -0.5, 1, -4.75, -0.5, 1, -5.75, -8.25, 1, -4, -7.25, 1, -3, -4.5, 1, -3, -0.5, 1, -5.75, 0, 1, -7.5, -1.25, 1, -11.25, -3.25, 1, -2, 0.75, 1, -3.25, -0.5, 1, -4.75, 0, 1, -7.5, 1, 1, -8.75, -1.25, 1, -11.25, 12.75, 1, -9.75, 12.25, 1, -6.5, 13, 1, -6.25, 12.75, 1, -9.75, 13, 1, -6.25, 14, 1, -4.75, 22.75, 1, -7.25, 13, 1, -1, 7.25, 1, 12.25, 7, 1, 14.25, 48, 1, 14.25, 48, 1, -11.25, 24, 1, -8, 22.75, 1, -7.25, 14, 1, -4.75, 13, 1, -1, 11.75, 1, -0.25, 9.25, 1, -0.75, 6.75, 1, 11.5, 24, 1, -8, 22.75, 1, -7.25, 13, 1, -1, 11.75, 1, -0.25, 6.75, 1, 11.5, 7.25, 1, 12.25, 13, 1, -1, 48, 1, -11.25, 25, 1, -11.25, 24, 1, -8, -8.25, 1, -2.5, -9, 1, -3.75, -10.25, 1, -3.5, -9, 1, -1.25, -12.25, 1, 13.5, -8.5, 1, 2.25, -9, 1, 1.5, -13.25, 1, 14, -9, 1, -1.25, -10.25, 1, -3.5, -11.25, 1, -4, -9, 1, -1.25, -11.25, 1, -4, -12.75, 1, -5.5, -14, 1, 16, -13.25, 1, 14, -9, 1, 1.5, -14, 1, 16, -12.75, 1, -5.5, -13.25, 1, -7.25, -48, 1, -7.25, -48, 1, 16, -12.25, 1, 13.5, -9.75, 1, 13.5, -8.5, 1, 2.25, 0.75, 1, -3.25, -3.25, 1, -2, -2.75, 1, -1.25, 0.75, 1, -3.25, -2.75, 1, -1.25, -2.75, 1, 1.5, 0.75, 1, -3.25, -2.75, 1, 1.5, -3.25, 1, 2.25, 2.75, 1, 10.5, 5.25, 1, 10.5, 5.5, 1, -1.75, -3.25, 1, 2.25, 2, 1, 11, 2.75, 1, 10.5, 5.25, 1, 10.5, 6.75, 1, 11.5, 9.25, 1, -0.75, 5.5, 1, -1.75, -7.75, 1, 15.5, 1.5, 1, 15, 1, 1, 13.75, -8.5, 1, 14, -7, 1, 3.25, -8.5, 1, 2.25, -9.75, 1, 13.5, -8.5, 1, 14, 1, 1, 13.75, 2, 1, 11, -3.25, 1, 2.25, -4.5, 1, 3.25, 1, 1, 12.25, 1, 1, 13.75, 1, 1, 12.25, -4.5, 1, 3.25, -7, 1, 3.25, 5.25, 1, 15.75, 4, 1, 15.75, 4, 1, 48, 7, 1, 14.25, 5.25, 1, 15.75, 4, 1, 48, 48, 1, 48, 48, 1, 14.25, 1.5, 1, 15, -7.75, 1, 15.5, -7.75, 1, 16.75, 2.75, 1, 15.75, 1.5, 1, 15, -7.75, 1, 16.75, -8.75, 1, 18.25, 4, 1, 15.75, 2.75, 1, 15.75, -8.75, 1, 18.25, -11, 1, 18.75, -11, 1, 48, 4, 1, 48, -11, 1, 48, -11, 1, 18.75, -13.25, 1, 18.25, -11, 1, 48, -13.25, 1, 18.25, -14, 1, 16, -48, 1, 16, -48, 1, 48)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(5, 4, 3), PackedInt32Array(7, 6, 8), PackedInt32Array(8, 6, 10), PackedInt32Array(8, 10, 9), PackedInt32Array(12, 11, 13), PackedInt32Array(13, 11, 14), PackedInt32Array(16, 15, 17), PackedInt32Array(17, 15, 18), PackedInt32Array(19, 21, 20), PackedInt32Array(23, 22, 24), PackedInt32Array(24, 22, 25), PackedInt32Array(25, 22, 26), PackedInt32Array(28, 27, 29), PackedInt32Array(29, 27, 30), PackedInt32Array(30, 27, 32), PackedInt32Array(30, 32, 31), PackedInt32Array(35, 34, 33), PackedInt32Array(38, 37, 36), PackedInt32Array(41, 40, 39), PackedInt32Array(43, 42, 44), PackedInt32Array(44, 42, 46), PackedInt32Array(44, 46, 45), PackedInt32Array(48, 47, 49), PackedInt32Array(49, 47, 50), PackedInt32Array(53, 52, 54), PackedInt32Array(54, 52, 51), PackedInt32Array(56, 55, 57), PackedInt32Array(57, 55, 58), PackedInt32Array(58, 55, 59), PackedInt32Array(59, 55, 60), PackedInt32Array(63, 62, 61), PackedInt32Array(66, 65, 64), PackedInt32Array(67, 69, 68), PackedInt32Array(71, 70, 72), PackedInt32Array(72, 70, 73), PackedInt32Array(75, 74, 76), PackedInt32Array(76, 74, 79), PackedInt32Array(76, 79, 78), PackedInt32Array(76, 78, 77), PackedInt32Array(82, 81, 80), PackedInt32Array(85, 84, 83), PackedInt32Array(88, 87, 86), PackedInt32Array(90, 89, 91), PackedInt32Array(91, 89, 92), PackedInt32Array(95, 94, 93), PackedInt32Array(97, 96, 98), PackedInt32Array(98, 96, 99), PackedInt32Array(101, 100, 102), PackedInt32Array(102, 100, 103), PackedInt32Array(104, 106, 105), PackedInt32Array(108, 107, 109), PackedInt32Array(109, 107, 112), PackedInt32Array(109, 112, 111), PackedInt32Array(109, 111, 110), PackedInt32Array(114, 113, 115), PackedInt32Array(115, 113, 117), PackedInt32Array(115, 117, 116), PackedInt32Array(120, 119, 118), PackedInt32Array(123, 122, 121), PackedInt32Array(126, 125, 124), PackedInt32Array(128, 127, 129), PackedInt32Array(129, 127, 132), PackedInt32Array(129, 132, 130), PackedInt32Array(130, 132, 131), PackedInt32Array(135, 134, 133), PackedInt32Array(137, 136, 138), PackedInt32Array(138, 136, 139), PackedInt32Array(141, 140, 142), PackedInt32Array(142, 140, 143), PackedInt32Array(147, 146, 148), PackedInt32Array(148, 146, 144), PackedInt32Array(144, 146, 145), PackedInt32Array(150, 149, 151), PackedInt32Array(151, 149, 152), PackedInt32Array(154, 153, 155), PackedInt32Array(155, 153, 156), PackedInt32Array(159, 158, 157), PackedInt32Array(161, 160, 162), PackedInt32Array(162, 160, 164), PackedInt32Array(162, 164, 163), PackedInt32Array(167, 166, 165), PackedInt32Array(169, 168, 170), PackedInt32Array(170, 168, 171), PackedInt32Array(173, 172, 174), PackedInt32Array(174, 172, 175), PackedInt32Array(175, 172, 176), PackedInt32Array(176, 172, 177), PackedInt32Array(178, 180, 179), PackedInt32Array(182, 181, 183), PackedInt32Array(183, 181, 184), PackedInt32Array(184, 181, 185)]
agent_radius = 2.0

[sub_resource type="BoxMesh" id="BoxMesh_5kd1b"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dk7vn"]

[sub_resource type="BoxMesh" id="BoxMesh_aj7l6"]
size = Vector3(10, 0.1, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_0qeht"]
size = Vector3(10, 0.1, 10)

[node name="Level2" type="Node3D"]
script = ExtResource("1_6xc7j")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_kury7")

[node name="PlayerTank" parent="." groups=["player"] instance=ExtResource("2_1kipn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.38488, 1.68043, 1.1244)

[node name="EnemyTank" parent="." instance=ExtResource("3_nk12r")]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, -10, 2, -17)

[node name="EnemyTank2" parent="." instance=ExtResource("3_nk12r")]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 17, 2, -17)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.611527, 0.159098, -0.775063, 0, 0.979575, 0.201079, 0.791224, 0.122965, -0.599037, -0.459754, 6.39808, 0)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_txjhr")

[node name="obstacle_tmp" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -6, 2, 0.123876)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/obstacle_tmp"]
mesh = SubResource("BoxMesh_5kd1b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/obstacle_tmp"]
shape = SubResource("BoxShape3D_dk7vn")

[node name="obstacle_tmp2" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 2, -11.8761)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/obstacle_tmp2"]
transform = Transform3D(1.41421, 0, -7.07107, 0, 1, 0, 1.41421, 0, 7.07107, -1, 0, 2)
mesh = SubResource("BoxMesh_5kd1b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/obstacle_tmp2"]
shape = SubResource("BoxShape3D_dk7vn")

[node name="obstacle_tmp3" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, 20, 2, -11.8761)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/obstacle_tmp3"]
transform = Transform3D(1.41421, 0, -7.07107, 0, 1, 0, 1.41421, 0, 7.07107, -1, 0, 2)
mesh = SubResource("BoxMesh_5kd1b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/obstacle_tmp3"]
shape = SubResource("BoxShape3D_dk7vn")

[node name="obstacle_tmp4" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, 9, 2, -4.8761)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/obstacle_tmp4"]
transform = Transform3D(1.41421, 0, -7.07107, 0, 1, 0, 1.41421, 0, 7.07107, -1, 0, 2)
mesh = SubResource("BoxMesh_5kd1b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/obstacle_tmp4"]
shape = SubResource("BoxShape3D_dk7vn")

[node name="Ground" type="MeshInstance3D" parent="NavigationRegion3D"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)
material_override = ExtResource("4_3jbwe")
mesh = SubResource("BoxMesh_aj7l6")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="NavigationRegion3D/Ground"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/Ground/StaticBody3D"]
shape = SubResource("BoxShape3D_0qeht")

[node name="HealthCrate" parent="NavigationRegion3D" instance=ExtResource("5_n2rjg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11, 1, 16)

[node name="ShellCrate" parent="NavigationRegion3D" instance=ExtResource("6_4xvo4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1, 13)

[node name="ObjectiveCheckTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="ObjectiveCheckTimer" to="." method="_on_objective_check_timer_timeout"]
